<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginBottom="3dp"
    android:layout_marginLeft="3dp"
    android:layout_marginRight="3dp"
    android:layout_marginTop="3dp"
    android:background="@drawable/background_telecomevent"
    android:orientation="vertical" >

    <ImageButton
        android:id="@+id/Buttonbrowse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/ic_menu_database" />



    <ImageButton
        android:id="@+id/ButtonLove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/Buttonbrowse"
        android:background="@drawable/ic_menu_love" />


    <ImageButton
        android:id="@+id/Buttonadd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="20dp"
        android:layout_toLeftOf="@+id/Buttonbrowse"
        android:background="@drawable/ic_menu_add" />


    <ImageButton
        android:id="@+id/Buttonhome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="20dp"
        android:layout_toLeftOf="@+id/Buttonadd"
        android:background="@drawable/ic_menu_halt" />


    <ImageButton
        android:id="@+id/Buttonsettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/ButtonLove"
        android:background="@drawable/ic_menu_settings" />


    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/description_titre"
        android:textAppearance="?android:attr/textAppearanceLarge" />








    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/Buttonbrowse"
        android:layout_below="@+id/textView1"
        android:src="@android:drawable/toast_frame" />



    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView1"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/Buttonbrowse"
        android:text="@string/description_auteur" />



    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/description_date_heure" />



    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/description_lieu" />







    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView4"
        android:text="@string/description_commentaires" />





    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ButtonLove"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/Buttonbrowse"
        android:text="@string/description_bouton_participants" />




    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button1"
        android:layout_alignBottom="@+id/button1"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/button1"
        android:text="@string/description_bouton_photo" />

</RelativeLayout>